fix: experiment list layout broken

--- a/mediawiki/extensions/ChemExtension/skins/main.css
+++ b/mediawiki/extensions/ChemExtension/skins/main.css
@@ -163,3 +163,7 @@ table.wikitable tr td.experiment-editable-column, th.experiment-editable-column 
     color: red;
     font-weight: bold;
 }
+
+.experimentlist-panel {
+    clear: right;
+}
